# meow-meow-3000

./: README.md  deploy_kali.sh  pyproject.toml
.junie/: ACTION_LOG.md  README.md
data/: logs.json
scripts/: push_to_github.ps1
waf/: config.py  dashboard_app.py  logger.py  proxy.py  rules.py  run_dashboard.py  run_waf.py  scoring.py
waf/static/: style.css
waf/templates/: dashboard.html
